attempted implementation of drinkmodal into mixpage results

--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -175,4 +175,8 @@
 .count-input-max::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
-  
+
+.ingredient-check-icon{
+    position: absolute;
+    height: 2.5%;
+}
