--- a/client/src/components/Results/ResultsPage.css
+++ b/client/src/components/Results/ResultsPage.css
@@ -21,11 +21,21 @@
     height: 100%
 }
 
+.go-home-button-off{
+    color: inherit;
+    text-shadow: inherit;
+    font-size: 300%;
+    margin-top: -1.75%;
+    margin-left: 1%;
+    font: 100 6vh "Vibur";
+    cursor: pointer;
+    transition: 1s ease;
+}
+
 .search-results-title{
     color: rgb(219, 205, 205);
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff984454, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
     font-size: 300%;
-    margin-top: .25%;
     font: 100 10vh "Vibur";
     cursor: default;
     transition: 1s;
@@ -62,8 +72,7 @@
     overflow-y: scroll;
     -ms-overflow-style: none; 
     scrollbar-width: none;  
-    margin-bottom: 2%;
-  }
+}
 
 .frozen{
     overflow-y: hidden;
@@ -71,10 +80,9 @@
   
 .search-results-card::-webkit-scrollbar {
     display: none;
-  }
+}
   
 .drink-cards-container{
-    /* margin-left: 1%; */
     margin-top: 1.15%;
     display: flex;
     flex-direction: row;
