minor color change

--- a/client/src/components/Profile/ProfilePage.css
+++ b/client/src/components/Profile/ProfilePage.css
@@ -70,3 +70,8 @@
     color: #fee;
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #44ffe6, 0 0 0.5em #44ffe6, 0 0 0.1em #44ffe6, 0 10px 3px #000;  
 }
+
+.l6{
+    color: #fee;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ffc422, 0 0 0.5em #ffc422, 0 0 0.1em #ffc422, 0 10px 3px #000;  
+}
