--- a/client/src/components/Modals/ProfileModal/ProfileModal.css
+++ b/client/src/components/Modals/ProfileModal/ProfileModal.css
@@ -1,5 +1,5 @@
 .modal-profile-image{
-    height: 90%;
+    height: 50vh;
 }
 
 .modal-profile-name{
@@ -15,11 +15,10 @@
 
 .modal-profile-details{
     text-align: left;
-    margin-left: 5%;
+    margin-left: 3%;
     font-family: 'Shippori Mincho', serif;
     font-size: 150%;
-    color: #fff;
-
+    color: rgb(200, 200, 200);
 }
 
 .modal-profile-details b{
@@ -47,20 +46,20 @@
     font-size: 150%;
     text-align: left;
     color: #fff;
-    margin-left: 5%;
+    color:rgb(128, 126, 126);
+    margin-left: 3%;
     /* margin-bottom: 3%; */
 }
 
 .modal-profile-cards-wrapper{
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
+    align-items: center;
     overflow-x: scroll;
     background-color: rgb(34, 34, 34);
     -ms-overflow-style: none; 
     scrollbar-width: none;
     width: 32.5vw;
-    /* height: 0.5vh; */
     height: 15vh;
     max-height: 13vh;
 }
@@ -71,5 +70,135 @@
 
 
 .modal-mini-drink-image{
-    height: 12vh;
+    height: 10vh;
+}
+
+.edit-button {
+    margin-top: 1vh;
+    cursor: pointer;
+    font-size: 155%;
+    width: 32.5vw;
+    font-family: 'Shippori Mincho', serif;
+    text-align: center;
+    border: none;
+    outline: none;
+    color: #fff;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff9844, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
+    font-weight: bold;
+    border-radius: 5px;    
+    padding-top: 1%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 1%;
+    background-color: rgb(36, 36, 36);
+    background-color: rgb(17, 17, 17);
+    transition: .25s;
+  }
+  
+.edit-button:hover {
+    opacity: .75;
+    cursor: pointer;
+    color: rgb(255, 228, 105);
+    transition: .25s
+} 
+
+.edit-button:active{
+    opacity: .65;
+    cursor: pointer;
+    color: aqua;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #6044ff, 0 0 0.5em #6044ff, 0 0 0.1em #6044ff, 0 10px 3px #000;
+}
+
+.logout-button {
+    margin-top: 1vh;
+    cursor: pointer;
+    font-size: 125%;
+    width: 30vw;
+    font-family: 'Shippori Mincho', serif;
+    text-align: center;
+    border: none;
+    outline: none;
+    color: rgb(252, 7, 101);
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4a44, 0 0 0.5em #ff4a44, 0 0 0.1em #ff4a44, 0 10px 3px #000;
+    font-weight: bold;
+    border-radius: 5px;    
+    padding-top: 1%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 1%;
+    background-color: rgb(17, 17, 17);
+    transition: .25s;
+  }
+  
+.logout-button:hover {
+    color: #fee;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4a44, 0 0 0.5em #ff4a44, 0 0 0.1em #ff4a44, 0 10px 3px #000;
+    cursor: pointer;
+}  
+
+.logout-button:active{
+    background-color: rgb(36, 36, 36);
+}
+
+.profile-edit-buttons{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.edit-button-active {
+    margin-top: 1vh;
+    cursor: pointer;
+    font-size: 155%;
+    width: 16vw;
+    font-family: 'Shippori Mincho', serif;
+    text-align: center;
+    border: none;
+    outline: none;
+    opacity: .65;
+    color: aqua;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #6044ff, 0 0 0.5em #6044ff, 0 0 0.1em #6044ff, 0 10px 3px #000;
+    font-weight: bold;
+    border-radius: 5px;    
+    padding-top: 1%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 1.5%;
+    background-color: rgb(36, 36, 36);
+    background-color: rgb(17, 17, 17);
+    transition: .25s;
+    margin-right: .575vh;
+  }
+
+.edit-button-active:hover{
+    color: #fff;
+}
+
+
+.submit-profile-changes-button{
+    margin-top: 1vh;
+    cursor: pointer;
+    font-size: 155%;
+    width: 16vw;
+    font-family: 'Shippori Mincho', serif;
+    text-align: center;
+    border: none;
+    outline: none;
+    opacity: .65;
+    color: rgb(159, 224, 133);
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #52e683, 0 0 0.5em #52e683, 0 0 0.1em #52e683, 0 10px 3px #000;
+    font-weight: bold;
+    border-radius: 5px;    
+    padding-top: 1%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 3%;
+    background-color: rgb(36, 36, 36);
+    background-color: rgb(17, 17, 17);
+    transition: .25s;
+
+}
+
+.submit-profile-changes-button:hover{
+    color: #fff;
 }
