--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -7,32 +7,32 @@
 .mix-page-title{
     color: rgb(219, 205, 205);
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff984454, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
-    font-size: 400%;
-    margin-top: -1.75%;
+    font-size: 300%;
+    /* margin-top: .5%; */
     font: 100 10vh "Vibur";
     cursor: default;
-    transition: .75s ease;
+    transition: .75s;
 }
 
 .mix-page-title-off{
     color: inherit;
     text-shadow: inherit;    
     font-size: 300%;
-    margin-top: -1.75%;
+    /* margin-top: .5%; */
     font: 100 10vh "Vibur";
     cursor: default;
-    transition: .75s ease;
+    transition: .75s;
 }
 
 .go-home-mix-page-button{
     color: rgb(219, 205, 205);
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff984454, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
     font-size: 300%;
-    margin-top: 0.5%;
+    margin-top: 2.75%;
     margin-left: 2.5%;
     font: 100 6vh "Vibur";
     cursor: pointer;
-    transition: .75s ease;
+    transition: 1s ease;
 }
 
 .go-home-mix-page-button:hover{
@@ -40,18 +40,6 @@
     color: #ff9191;
     height: 100%
 }
-
-.go-home-mix-page-button-off{
-    color: inherit;
-    text-shadow: inherit;    
-    font-size: 300%;
-    margin-top: 0.5%;
-    margin-left: 2.5%;
-    font: 100 6vh "Vibur";
-    cursor: pointer;
-    transition: .75s ease;
-}
-
 
 .mix-page-items-wrapper{
     margin-top: .6%;
@@ -83,6 +71,7 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 2%;
 }
 
 .mix-page-ingredients-holder{
@@ -176,7 +165,7 @@
     text-align: center;
     width: fit-content;
     margin-bottom: 3.25%;
-    
+
 }
   
 .reset-mix:hover{
