--- a/client/src/components/Modals/MixModal/MixModal.css
+++ b/client/src/components/Modals/MixModal/MixModal.css
@@ -53,11 +53,12 @@
 
 .mix-modal-input{
     background-color: rgba(0, 0, 0, 0.363);
+    text-align: center;
     border-color: transparent;
     font-family: 'Shippori Mincho', serif;
     border-radius: 5px;
-    font-size: 350%;
-    width: 70%;
+    font-size: 300%;
+    width: 100%;
     color: #fff;
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff984470, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
 }
