--- a/client/src/components/Modals/Modal.css
+++ b/client/src/components/Modals/Modal.css
@@ -144,3 +144,41 @@
 }
 
 
+.unfavorite-button {
+    margin-top: 1vh;
+    cursor: pointer;
+    font-size: 155%;
+    width: 32.5vw;
+    font-family: 'Shippori Mincho', serif;
+    text-align: center;
+    border: none;
+    outline: none;
+    color: rgb(252, 7, 101);
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4a44, 0 0 0.5em #ff4a44, 0 0 0.1em #ff4a44, 0 10px 3px #000;
+    font-weight: bold;
+    border-radius: 5px;    
+    padding-top: 1%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 1%;
+    background-color: rgb(36, 36, 36);
+    background-color: rgb(17, 17, 17);
+    transition: .25s;
+  }
+  
+.unfavorite-button:hover {
+    opacity: .75;
+    color: aqua;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #6044ff, 0 0 0.5em #6044ff, 0 0 0.1em #6044ff, 0 10px 3px #000;
+    cursor: pointer;
+} 
+
+.unfavorite-button:active{
+    opacity: .65;
+    color: rgb(255, 228, 105);
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff9844, 0 0 0.5em #ff9844, 0 0 0.1em #ff9844, 0 10px 3px #000;
+    cursor: pointer;
+}
+
+
+
