fixed flaw with displaying created drinks from profile modal by rerouting informatin from drinks state array

--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -41,6 +41,11 @@
     height: 100%
 }
 
+.go-home-mix-page-button-lightsout{
+    color: inherit;
+    text-shadow: inherit;
+}
+
 .mix-page-items-wrapper{
     margin-top: .6%;
     display: flex;
