--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -8,6 +8,7 @@
     transition: color .5s;
     display: grid;
     flex-direction: column;
+    transition: .5s ease;
 }
 
 .ingredient-card-container-active{
@@ -20,6 +21,7 @@
     transition: color .5s;
     display: grid;
     flex-direction: column;
+    transition: 1s ease;
 }
 
 .ingredient-card-image{
