--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -78,6 +78,23 @@
 
 }
 
+.mix-recipes-wrapper{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    height: 200%;
+    overflow-y: scroll;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+}
+
+.mix-recipes-wrapper::-webkit-scrollbar {
+    display: none;
+  }
+
+
 .mix-page-ingredients-container{
     display:flex;
     flex-direction: column;
@@ -105,7 +122,7 @@
   
 .mix-page-ingredients-holder::-webkit-scrollbar {
     display: none;
-  }
+}
   
 .mix-page-ingredients-cards-container{
     /* margin-left: 1%; */
@@ -157,20 +174,18 @@
 }
 
 .reset-mix{
-    margin-top: 5%;
+    margin-top: 2.5%;
     font-family: 'Shippori Mincho', serif;
     text-align: center;
     border: none;
     outline: none;
     color: #fee;
-    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4a44, 0 0 0.5em #ff4a44, 0 0 0.1em #ff4a44, 0 10px 3px #000;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4a4469, 0 0 0.5em #ff4a4469, 0 0 0.1em #ff4a4469, 0 10px 3px #000;
     background-color: rgb(17, 17, 17);
-    /* width: 25%; */
     padding-left: 10%;
     padding-right: 10%;
-    /* padding-bottom: 1%; */
+    padding-bottom: 1%;
     transition: .35s ease-in-out;
-    /* opacity: .5; */
     border-radius:5px;
     font-size:150%;
     text-align: center;
