--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -179,7 +179,7 @@
     text-align: center;
     border: none;
     outline: none;
-    color: #fee;
+    color: rgb(245, 187, 187);
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4a4469, 0 0 0.5em #ff4a4469, 0 0 0.1em #ff4a4469, 0 10px 3px #000;
     background-color: rgb(17, 17, 17);
     padding-left: 10%;
