--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -21,41 +21,111 @@
     transition: color .5s;
     display: grid;
     flex-direction: column;
-    transition: 1s ease;
+    transition: .75s ease;
 }
 
 .ingredient-card-image{
+    align-self: center;
+    justify-self: center;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    /* margin-bottom: 20%; */
-    margin-left: 25%;
-    height: 80%;
-    width: 80%;
-    max-width: 100px;
-    max-height: 80px;
+    height: 10vh;
+    width: 5vw;
+    max-width: 10vw;
+    max-height: 10vh;
 }
 
 .gin {
-    margin-left: 30%;
-    height: 75px;
-    width: 55px;
+    height: 8.5vh;
+    width: 3vw;
+    margin-top: .75vh;
+    margin-bottom: .75vh;
+
+}
+
+.whiskey{
+    height: 9vh;
+    width: 7.5vw;
+    margin-top: .5vh;
+    margin-bottom: .5vh; 
+}
+
+.brandy {
+    height: 9vh;
+    width: 4vw;
+    margin-top: .5vh;
+    margin-bottom: .5vh;
+
+}
+
+.almondliquer {
+    height: 9vh;
+    width: 7vw;
+    margin-top: .5vh;
+    margin-bottom: .5vh;
+
 }
 
 .nutmeg{
-    height: 65px;
-    width: 65px;
+    height: 7.25vh;
+    width: 5vw;
+    margin-top: 1.375vh;
+    margin-bottom: 1.375vh;
+}
+
+.coconut{
+    height: 7.25vh;
+    width: 5vw;
+    margin-top: 1.375vh;
+    margin-bottom: 1.375vh;
+}
+
+.Tomato{
+    height: 8vh;
+    width: 5vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+}
+
+.salt{
+    height: 8vh;
+    width: 6vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 .milk{
-    margin-left: 35%;
-    height: 75px;
-    width: 50px;
+    height: 10vh;
+    width: 3vw;
 }
 
 .mint{
-    height: 75px;
-    width: 75px;
+    height: 9vh;
+    width: 5vw;
+    margin-top: .5vh;
+    margin-bottom: .5vh;
 }
+
+.vodka{
+    height: 10vh;
+    width: 15vh;
+}
+
+.Lime{
+    height: 8.5vh;
+    width: 12vh;
+    margin-top: .75vh;
+    margin-bottom: .75vh;
+}
+
+.paprika{
+    height: 9vh;
+    width: 13vh;
+    margin-top: .5vh;
+    margin-bottom: .5vh;
+
+}
+
 
 .ingredient-card-text-info{
     display: flex;
