--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -123,7 +123,20 @@
     width: 13vh;
     margin-top: .5vh;
     margin-bottom: .5vh;
+}
 
+.capelletti{
+    height: 9vh;
+    width: 3vh;
+    margin-top: .5vh;
+    margin-bottom: .5vh;
+}
+
+.dragonfruit{
+    height: 8vh;
+    width: 10vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 
