initial styling for tabs

--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -111,7 +111,10 @@
     margin-top: -1.15%;
     width: 85vh;
     height: 78.5vh;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
     background-color: rgb(23, 23, 32);
     background-size: cover;
     background-position: center;
@@ -205,3 +208,47 @@
     text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4a44, 0 0 0.5em #ff4a44, 0 0 0.1em #ff4a44, 0 10px 3px #000;
     cursor: pointer;
 }
+
+.mix-page-ingredients-tab-holders{
+    /* margin-top: -10%; */
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: rgb(221, 105, 105);
+    /* height: 5vh; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.mix-page-ingredients-type-tab{
+    font-family: 'Shippori Mincho', serif;
+    align-self: center;
+    justify-self: center;
+    color: white;
+    height: 5vh;
+    width: 100%;
+    transition: .5s ease;
+}
+
+.mix-page-ingredients-type-tab:hover{
+    background-color: rgb(53, 53, 53);
+    transition: .25s ease;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #4476ff, 0 0 0.5em #4476ff, 0 0 0.1em #4476ff, 0 10px 3px #000;
+}
+
+.mix-page-ingredients-type-tab:nth-of-type(1):hover{
+    border-top-left-radius: 10px;
+}
+
+.mix-page-ingredients-type-tab:nth-of-type(4):hover{
+    border-top-right-radius: 10px;
+}
+
+
+/* .mix-page-ingredients-tab-holders > .mix-page-ingredients-type-tab:hover {
+    border-top-left-radius: 10px;
+}
+
+.mix-page-ingredients-tab-holders > .mix-page-ingredients-type-tab ~ .mix-page-ingredients-type-tab:hover {
+    border-top-left-radius: 0px;
+} */
