minor button styling updates

--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -204,7 +204,7 @@
     border-radius: 5px;
     font-size: 150%;
     text-align: center;
-    width: fit-content;
+    width: 40%;
     margin-bottom: 3.25%;
 
 }
