updated ingredients styling to not have wasted space

--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -9,12 +9,18 @@
     display: grid;
     flex-direction: column;
     transition: .5s ease;
+    margin-left: 3.5%;
 }
+
+.ingredient-card-container:nth-of-type(1){
+    margin-left: 0%;
+}
+
 
 .ingredient-card-container-active{
     background-color: rgb(93, 93, 97);
-    height: 15vh;
-    width: 25vh;
+    /* height: 15vh;
+    width: 25vh; */
     border-radius: 10px;
     background-size: cover;
     background-position: center;
