--- a/client/src/components/IngredientCard/IngredientCard.css
+++ b/client/src/components/IngredientCard/IngredientCard.css
@@ -19,8 +19,8 @@
 
 .ingredient-card-container-active{
     background-color: rgb(93, 93, 97);
-    /* height: 15vh;
-    width: 25vh; */
+    height: 15vh;
+    width: 25vh;
     border-radius: 10px;
     background-size: cover;
     background-position: center;
@@ -28,7 +28,14 @@
     display: grid;
     flex-direction: column;
     transition: .75s ease;
+    margin-left: 3.5%;
+
 }
+
+.ingredient-card-container-active:nth-of-type(1){
+    margin-left: 0%;
+}
+
 
 .ingredient-card-image{
     align-self: center;
