--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -190,8 +190,11 @@
     font-size: 3vh;
 }
 
-.mix-recipe {
+.mix-recipe-identity{
     margin-top: 1.5%;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
     background-color: rgb(15, 15, 15);
     border-radius: 10px;
     width: 80%;
@@ -200,6 +203,14 @@
     font-size: larger;
     padding-top: 1%;
     padding-bottom: 2%;
+}
+
+.mix-recipe {
+}
+
+.mix-recipe-partsCount{
+    margin-left: 2.5%;
+    color: rgb(128, 126, 126);
 }
 
 .reset-mix {
