--- a/client/src/components/DrinkCard/DrinkCard.css
+++ b/client/src/components/DrinkCard/DrinkCard.css
@@ -14,6 +14,10 @@
     overflow-x: hidden;
 }
 
+.favorite{
+    background-color: rgb(93, 93, 97);
+}
+
 .drink-card-image{
     align-self: center;
     justify-self: center;
