updated drinkcard syling to have proper spacing between image and title

--- a/client/src/components/DrinkCard/DrinkCard.css
+++ b/client/src/components/DrinkCard/DrinkCard.css
@@ -9,7 +9,7 @@
     transition: color .5s;
     display: flex;
     flex-direction: column;
-    align-content: center;
+    justify-content: space-between;
     overflow-y: hidden;
     overflow-x: hidden;
 }
@@ -23,7 +23,6 @@
     justify-self: center;
     height: 15vh;
     width: 15vw;
-    margin-bottom: 12%;
     overflow-y: hidden;
 }
 
