--- a/client/src/components/DrinkCard/DrinkCard.css
+++ b/client/src/components/DrinkCard/DrinkCard.css
@@ -22,7 +22,7 @@
     align-self: center;
     justify-self: center;
     height: 15vh;
-    width: 15vw;
+    /* width: 15vw; */
     overflow-y: hidden;
 }
 
