--- a/client/src/components/Modals/ProfileModal/ProfileModal.css
+++ b/client/src/components/Modals/ProfileModal/ProfileModal.css
@@ -72,9 +72,25 @@
     display: none;
 }
 
+.modal-mini-card-container{
+    background-color: rgb(52, 52, 52);
+    height: 10vh;
+    width: 80px;
+    border-radius: 7px;
+    background-size: cover;
+    background-position: center;
+    transition: color .5s;
+    display: grid;
+    flex-direction: column;
+    transition: .5s ease;
+    margin-left: 3.5%;
+    justify-content: center;
+    align-content: center;
+}
+
 
 .modal-mini-drink-image{
-    height: 10vh;
+    height: 8vh;
     cursor: pointer;
 }
 
