--- a/client/src/components/Mixing/MixPage.css
+++ b/client/src/components/Mixing/MixPage.css
@@ -160,7 +160,7 @@
     padding-top: 5%;
     padding-left: 10%;
     padding-right: 10%;
-    padding-bottom: 7%;
+    padding-bottom: 5%;
     transition: .35s ease-in-out;
     border-radius: 10px;
     text-align: center;
@@ -168,6 +168,7 @@
     font-size: 300%;
     color: #fff;
     /* text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #4476ff6e, 0 0 0.5em #4476ff, 0 0 0.1em #4476ff, 0 10px 3px #000; */
+    margin-bottom: 10%;
 }
 
 .mix-button:hover {
@@ -213,6 +214,17 @@
     color: rgb(128, 126, 126);
 }
 
+.button-wrappers {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.reset-switch-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
 .reset-mix {
     margin-top: 2.5%;
     font-family: 'Shippori Mincho', serif;
@@ -224,13 +236,14 @@
     background-color: rgb(17, 17, 17);
     padding-left: 10%;
     padding-right: 10%;
-    padding-bottom: 1%;
+    padding-bottom: 5%;
     transition: .35s ease-in-out;
     border-radius: 5px;
     font-size: 150%;
     text-align: center;
-    width: 40%;
+    width: 150%;
     margin-bottom: 3.25%;
+    margin-left: 5%;
 
 }
 
@@ -304,3 +317,4 @@
     color: #fff;
     transition: .5s ease;
 }
+
